# manifold_datadump_analysis

./: .gitignore  LICENSE.md  README.md  calculate_profits.py  churn.py  convert_json_to_ndjson.py  ndjson_to_parquet.py  predict_churn.ipynb  pyproject.toml  why.md
